# project_init

./: README.md
cmake_with_gtest/: .clang-format  .clang-tidy  CMakeLists.txt  cspell.config.yaml
cmake_with_gtest/inc_private/: private_class.h
cmake_with_gtest/src/: main.cc  private_class.cc  public_class.cc
cmake_with_gtest/tests/: CMakeLists.txt
